gitignore: lainviewer binary

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+lainviewer
 
 # Created by https://www.toptal.com/developers/gitignore/api/go
 # Edit at https://www.toptal.com/developers/gitignore?templates=go
